inertia/assets/css/components/_form-container.scss
@use "../partials/functions";
@use "../partials/mixins";

.form-container {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 12px;
  border-radius: var(--border-radius-xl);
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
  background: var(--background);
  box-shadow: var(--shadow);
  overflow: hidden;

  &--medium {
    padding: 36px 24px;

    .form-container {
      &__title {
        text-align: center;
      }
    }
  }

  &--medium {
    .button {
      margin-top: 6px;
      width: 100%;
    }
  }

  &--large {
    padding: 18px;

    @media screen and (max-width: 767px) {
      padding: 18px 18px 48px;
      width: 100%;
      border-radius: 0;
      box-shadow: none;
      overflow-y: auto;

      form {
        flex: 1;
      }
    }
  }

  &__title {
    font-size: functions.rem(20);
    line-height: 1;
    font-weight: 700;
  }

  form {
    display: flex;
    flex-direction: column;
    gap: 12px;
    width: 100%;
  }

  a {
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }

  .profile-picture-input {
    margin-bottom: 4px;
  }

  &__row {
    display: flex;
    gap: 12px;

    > div {
      width: calc(50% - 6px);
    }
  }

  &__actions {
    display: flex;
    gap: 8px;
    padding-top: 6px;

    @media screen and (max-width: 767px) {
      flex-direction: column;
      padding-top: 6px;
      margin-top: auto;

      .button {
        width: 100%;
      }
    }
  }

  &__bottom {
    p {
      @include mixins.font-type('text-medium');
      margin-top: 6px;
    }
  }

  &__loader {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

